@@ -1,3 +1,9 @@
+2007-01-17  Corinna Vinschen  <corinna@vinschen.de>
+
+	* mmap.cc (MapView9x): Note possible uselessness of retrying.
+	(MapViewNT): Ditto.
+	(mmap64): Fix pre-reservation to work for non NULL, non MAP_FIXED.
+
 2007-01-15  Corinna Vinschen  <corinna@vinschen.de>
 
 	* CYGWIN_LICENSE: Fix web pages and contact information.
